# Zombistroyer-2

./: CMakeLists.txt  Makefile  README  README.md
materials/maps/: map00.zm  map01.map  map01.tmj  map01.zm  map01_bg.csv  map01_fg.csv  map02.zm  map03.zm  map04.zm
src/: aim.c  aim.h  bullet.c  bullet.h  context.h  dialogbox.c  dialogbox.h  door.c  door.h  draw.c  draw.h  enemy_bullet.c  enemy_bullet.h  enemy_util.c  enemy_util.h  entity.c  entity.h  fixer.c  fixer.h  game.c  game.h  hud.c  hud.h  input.c  input.h  main.c  particle.c  particle.h  pickup.c  pickup.h  player.c  player.h  shooter.c  shooter.h  shotgun.c  shotgun.h  stack.c  stack.h  stringer.c  stringer.h  (+10 more)
